--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <!-- <app-root></app-root> -->
-  <app-hello-world></app-hello-world>
+  <app-header></app-header>
+  <app-footer></app-footer>
+    
 </body>
 </html>
